# sistema-clinica-django

./: .flake8  .gitignore  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml
apps/base/: backends.py  models.py  signals.py  urls.py  views.py
apps/home/: urls.py  views.py
apps/patients/: admin.py  forms.py  models.py  urls.py  views.py
apps/patients/migrations/: 0001_initial.py  0002_alter_patients_birth_date_alter_patients_ethnicity.py
apps/schedule/: forms.py  models.py  urls.py  views.py
apps/schedule/migrations/: 0001_initial.py  0002_remove_schedule_slug.py
apps/schedule/templatetags/: name_reduced.py
apps/users/: admin.py  forms.py  models.py  tests.py
apps/users/migrations/: 0001_initial.py
base/: urls.py
contrib/: env-sample  settings.ini.sample
sistema_boa_visao/: asgi.py  settings.py  urls.py  wsgi.py
templates/base/: base.html
templates/base/includes/: navbar.html  sidebar.html  tbody.html
templates/home/: home.html
templates/patients/: create_patients.html  list_patients.html
templates/schedule/: create_schedule.html  index.html
