[tool.poetry]
name = "dependencias-clinica"
version = "0.1.0"
description = "\"Libs que serão utilizadas no sistema boa visão\""
authors = ["Henriquelima1984 <henriquecorreia100@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
